[gd_scene load_steps=12 format=3 uid="uid://bjc8krr5q3x24"]

[ext_resource type="Texture2D" uid="uid://cay5qab3unigo" path="res://asset/MainMenu/Background.png" id="1_ekxnf"]
[ext_resource type="Script" uid="uid://bmy6gvtxmu0dd" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://by0bftan2ht6r" path="res://asset/MainMenu/BtnArrow.png" id="3_8ln24"]
[ext_resource type="Texture2D" uid="uid://bt3bqfpfxiei8" path="res://asset/MainMenu/BtnArrowHover.png" id="4_8ln24"]
[ext_resource type="FontFile" uid="uid://bkw1sndk0dkgc" path="res://asset/Fonts/PressStart2P-Regular.ttf" id="4_wu84c"]
[ext_resource type="PackedScene" uid="uid://dry5hylvuosuf" path="res://scenes/fade_transition.tscn" id="6_rtw2f"]
[ext_resource type="AudioStream" uid="uid://cg76jctuu0c4k" path="res://asset/Music/stage 2.mp3" id="7_oa1go"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("1_ekxnf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="Control" node_paths=PackedStringArray("menu_buttons")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")
menu_buttons = [NodePath("HBoxContainer/ButtonContainer/Start"), NodePath("HBoxContainer/ButtonContainer/Option"), NodePath("HBoxContainer/ButtonContainer/Credit"), NodePath("HBoxContainer/ButtonContainer/Quit")]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -322.0
offset_top = -232.0
offset_right = 323.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="LeftArrow" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture_normal = ExtResource("3_8ln24")
texture_hover = ExtResource("4_8ln24")

[node name="ButtonContainer" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Start" type="Button" parent="HBoxContainer/ButtonContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = -27.0
offset_right = 220.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
text = "Start"
expand_icon = true

[node name="Option" type="Button" parent="HBoxContainer/ButtonContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = -27.0
offset_right = 220.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
text = "Option"
expand_icon = true

[node name="Credit" type="Button" parent="HBoxContainer/ButtonContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = -27.0
offset_right = 220.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
text = "Credit"
expand_icon = true

[node name="Quit" type="Button" parent="HBoxContainer/ButtonContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = -27.0
offset_right = 220.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
text = "Quit"
expand_icon = true

[node name="RightArrow" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("3_8ln24")
texture_hover = ExtResource("4_8ln24")
flip_h = true

[node name="FadeTransition" parent="." instance=ExtResource("6_rtw2f")]
visible = false
layout_mode = 1

[node name="musik" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_oa1go")
autoplay = true
max_distance = 4096.0
attenuation = 1e-05
bus = &"Music"

[connection signal="pressed" from="HBoxContainer/LeftArrow" to="." method="_on_left_arrow_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/Start" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/Option" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/Credit" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/Quit" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightArrow" to="." method="_on_right_arrow_pressed"]
